@@ -82,6 +82,7 @@ BerliOS Bugs are marked with (BerliOS #XXXX).
   avoid seg.faults (kukuk)
 * pam_shells: correct README
 * libpam: Fix debug code (kukuk)
+* pam_limits: Fix order of LIMITS_DEF_* priorities (kukuk)
 
 0.78: Do Nov 18 14:48:36 CET 2004
 
